<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShowActivity">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/showNestedScroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/showImage"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:visibility="gone"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/showTextLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="18dp"
                android:fontFamily="@font/montserrat_semi_bold"
                android:gravity="start"
                android:text="TextView"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:visibility="gone"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/showTextName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/montserrat_semi_bold"
                android:gravity="start"
                android:text="TextView"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:visibility="gone"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/showTextLastName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/montserrat_semi_bold"
                android:gravity="start"
                android:text="TextView"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:visibility="gone"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/showTextEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/montserrat_semi_bold"
                android:gravity="center"
                android:text="TextView"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:visibility="gone"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/showTextLevel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/montserrat_semi_bold"
                android:gravity="start"
                android:text="TextView"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:visibility="gone"
                tools:visibility="visible" />

            <View
                android:id="@+id/showDivider"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_marginTop="25dp"
                android:background="@android:color/darker_gray"
                android:visibility="gone" />

            <RelativeLayout
                android:id="@+id/showSkillsRL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:orientation="horizontal"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="20dp"
                    android:fontFamily="@font/montserrat_bold"
                    android:gravity="center"
                    android:text="@string/skills"
                    android:textColor="@color/black"
                    android:textSize="28sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/showSkillsOpenImage"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerInParent="true"
                    android:layout_marginEnd="20dp"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:src="@drawable/ic_add" />
            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/showSkillsRecycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:overScrollMode="never"
                android:translationY="0dp"
                android:visibility="gone" />

            <RelativeLayout
                android:id="@+id/showProjectsRL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:orientation="horizontal"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:fontFamily="@font/montserrat_bold"
                    android:gravity="center"
                    android:text="@string/projects"
                    android:textColor="@color/black"
                    android:textSize="28sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/showProjectsOpenImage"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerInParent="true"
                    android:layout_marginEnd="20dp"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:src="@drawable/ic_add" />
            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/showProjectsRecycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:overScrollMode="never"
                android:translationY="0dp"
                android:visibility="gone" />

            <RelativeLayout
                android:id="@+id/showAchievementsRL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:orientation="horizontal"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:fontFamily="@font/montserrat_bold"
                    android:gravity="center"
                    android:text="@string/achievements"
                    android:textColor="@color/black"
                    android:textSize="28sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/showAchievementsOpenImage"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerInParent="true"
                    android:layout_marginEnd="20dp"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:src="@drawable/ic_add" />
            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/showAchievementsRecycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:overScrollMode="never"
                android:translationY="0dp"
                android:visibility="gone" />

            <RelativeLayout
                android:id="@+id/showCampusRL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:orientation="horizontal"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:fontFamily="@font/montserrat_bold"
                    android:gravity="center"
                    android:text="@string/campus"
                    android:textColor="@color/black"
                    android:textSize="28sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/showCampusOpenImage"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerInParent="true"
                    android:layout_marginEnd="20dp"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:src="@drawable/ic_add" />
            </RelativeLayout>

            <TextView
                android:id="@+id/showCampusText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/montserrat_semi_bold"
                android:padding="15dp"
                android:text="Fdsfsdfdsf"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:translationY="0dp"
                android:visibility="gone" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/showProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center" />
    <TextView
        android:id="@+id/showTextNoInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:text="@string/try_another"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:visibility="gone" />
</RelativeLayout>